# hox-agentos

./: .dev-secrets.example  .env.example  .gitignore  CLAUDE.md  SUPERPOWERS.md  claude-md-review.html  code-map.html  docker-compose.local.yml  docker-compose.yml  install-superpowers.sh  justfile  test-upload.txt
backend/: .dockerignore  Dockerfile  alembic.ini  main.py  pyproject.toml  workflow_events.py
backend/agents/: artifact_builder.py  artifact_builder_prompts.py  artifact_builder_validation.py  condition_evaluator.py  delivery_router.py  graphs.py  master_agent.py  node_handlers.py  workflow_state.py
backend/agents/state/: artifact_builder_types.py  types.py
backend/agents/subagents/: __init__.py  calendar_agent.py  email_agent.py  project_agent.py  router.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_memory_conversations.py  003_user_credentials.py  004_user_instructions.py  005_conversation_titles.py  006_fix_user_instructions_updated_at.py  007_phase3_settings.py  008_phase3_memory_tables.py  009_conversation_titles_timestamps.py  010_phase4_workflows.py  011_phase4_workflow_templates.py  012_owner_roles_json.py  013_channel_tables.py  014_extensibility_registries.py  015_seed_builtin_skills.py  016_rls_policies.py  017_local_auth_tables.py  018_local_auth_trigger.py  019_ecosystem_capabilities.py  020_add_user_preferences.py  (+13 more)
backend/api/: __init__.py
backend/capabilities/: __init__.py  schemas.py  tool.py
backend/channels/: __init__.py  adapter.py  gateway.py  models.py
backend/core/: config.py  context.py  db.py  logging.py  metrics.py  prompts.py
backend/gateway/: runtime.py  tool_registry.py
backend/mcp/: __init__.py  client.py  installer.py  registry.py  stdio_client.py
backend/memory/: embeddings.py  long_term.py  medium_term.py  short_term.py
backend/openapi_bridge/: __init__.py  parser.py  proxy.py  routes.py  schemas.py  service.py
backend/prompts/: artifact_builder_agent.md  artifact_builder_gather_type.md  artifact_builder_mcp_server.md  artifact_builder_skill.md  artifact_builder_tool.md  calendar_agent.md  email_agent.md  intent_classifier.md  master_agent.md  project_agent.md
backend/registry/: __init__.py  models.py  service.py
backend/sandbox/: executor.py  policies.py
backend/scheduler/: __init__.py  celery_app.py
backend/scripts/: seed_local_admin.py
backend/security/: __init__.py  acl.py  circuit_breaker.py  credentials.py  deps.py  jwt.py  keycloak_client.py  keycloak_config.py  local_auth.py  rbac.py  scan_client.py  sso_health.py  sso_notifications.py
backend/skill_export/: __init__.py  exporter.py  routes.py  schemas.py
backend/skill_repos/: __init__.py  routes.py  schemas.py  service.py
backend/skills/: __init__.py  executor.py  import_service.py  importer.py  safe_eval.py  security_scanner.py  validator.py
backend/storage/: __init__.py  client.py  service.py  text_extractor.py
backend/tests/: conftest.py  test_acl.py  test_acl_cache.py  test_agent_registry.py  test_agents_auth.py  test_capabilities.py  test_config.py  test_conversations.py  test_credentials_api.py  test_health.py  test_jwt.py  test_llm_metrics.py  test_local_auth.py  test_logging.py  test_mcp_evolution.py  test_memory_caches.py  test_metrics.py  test_openapi_bridge.py  test_phase6_integration.py  test_prompts.py  test_rbac.py  test_rbac_db.py  test_registry_models.py  test_registry_service.py  test_request_session.py  test_runtime.py  test_safe_eval.py  test_security_scan_client.py  test_security_scanner.py  test_skill_executor.py  test_skill_export.py  test_skill_importer.py  test_skill_repo_service.py  test_skill_repos.py  test_skill_validator.py  test_slash_dispatch.py  test_system_config.py  test_timed_logging.py  test_tool_registry_db.py  test_user_instructions.py  (+7 more)
channel-gateways/teams/: Dockerfile  main.py  pyproject.toml  teams_api.py
channel-gateways/whatsapp/: Dockerfile  main.py  pyproject.toml  whatsapp_api.py
infra/security-scanner/: Dockerfile  main.py  pyproject.toml
(+978 files in other folders)
