[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.14.0",
    "asyncpg==0.30.0",
    "celery[redis]==5.4.0",
    "fastapi==0.115.0",
    "httpx==0.28.0",
    "langchain-openai==0.3.0",
    "pydantic==2.10.0",
    "pydantic-settings==2.7.0",
    "python-jose[cryptography]==3.3.0",
    "redis==5.2.1",
    "sqlalchemy==2.0.36",
    "structlog==25.1.0",
    "uvicorn[standard]==0.34.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "cryptography>=46.0.0",
    "pytest==8.3.0",
    "pytest-asyncio==0.25.0",
    "pytest-mock==3.14.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]
