[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.14.0",
    "asyncpg==0.30.0",
    "celery[redis]==5.4.0",
    "copilotkit==0.1.78",
    "croniter>=6.0.0",
    "docker>=7.0.0",
    "fastapi>=0.115.12,<0.116",
    "flagembedding>=1.3.5",
    "httpx==0.28.0",
    "langchain-openai==0.3.0",
    "langgraph>=0.4.11",
    "langgraph-checkpoint-postgres>=3.0.4",
    "bcrypt>=4.0.0",
    "pgvector>=0.4.2",
    "prometheus-client>=0.20.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.11.0",
    "pydantic-settings==2.7.0",
    "python-jose[cryptography]==3.3.0",
    "redis==5.2.1",
    "sqlalchemy==2.0.36",
    "structlog==25.1.0",
    "transformers<5.0",
    "uvicorn[standard]==0.34.0",
    "email-validator>=2.0.0",
    "cachetools>=7.0.2",
    "python-multipart>=0.0.22",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "bandit[toml]>=1.8.0",
    "cryptography>=46.0.0",
    "pytest==8.3.0",
    "pytest-asyncio==0.25.0",
    "pytest-mock==3.14.0",
    "types-cachetools>=6.2.0.20251022",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]
